--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             margin: 0px;
             padding: 0px;
             background: url(https://images.unsplash.com/photo-1605296867304-46d5465a13f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Z3ltJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80);
-            
+            background-size: cover;
+
         }
 
         .left{
